Fixed colored card backgrounds flickering on reload

--- a/src/app.css
+++ b/src/app.css
@@ -24,6 +24,14 @@ html.dark-mode .component-icon {
   background-color: rgba(0,0,0,0.5);
 }
 
+html.colored-cards .grayscale-card-background {
+  display: none;
+}
+
+html.grayscale-cards .colored-card-background {
+  display: none;
+}
+
 @plugin "daisyui/theme" {
   name: "sunset";
   default: false;
